# Sixtar-Switch

./: .gitignore  .gitmodules  README.md  Sixtar-Switch.kicad_pro  sym-lib-table
Sixtar-Switch_Arduino/: .gitignore  Sixtar-Switch_Arduino.ino
Sixtar-Switch_PCB/: #auto_saved_files#  Sixtar-Switch-eagle-import.kicad_sym  Sixtar-Switch.kicad_pcb  Sixtar-Switch.kicad_pro  Sixtar-Switch.kicad_sch  sym-lib-table  ~Sixtar-Switch.kicad_sch.lck
Sixtar-Switch_PCB/3dmodel/: AMS117.stl  u262-16xn-4bvc11.stl
Sixtar-Switch_PCB/gerber/: Sixtar-Switch-B_Adhesive.gbr  Sixtar-Switch-B_Courtyard.gbr  Sixtar-Switch-B_Cu.gbr  Sixtar-Switch-B_Fab.gbr  Sixtar-Switch-B_Mask.gbr  Sixtar-Switch-B_Paste.gbr  Sixtar-Switch-B_Silkscreen.gbr  Sixtar-Switch-Edge_Cuts.gbr  Sixtar-Switch-F_Adhesive.gbr  Sixtar-Switch-F_Courtyard.gbr  Sixtar-Switch-F_Cu.gbr  Sixtar-Switch-F_Fab.gbr  Sixtar-Switch-F_Mask.gbr  Sixtar-Switch-F_Paste.gbr  Sixtar-Switch-F_Silkscreen.gbr  Sixtar-Switch-Margin.gbr  Sixtar-Switch-NPTH-drl_map.dxf  Sixtar-Switch-NPTH-drl_map.gbr  Sixtar-Switch-NPTH-drl_map.ps  Sixtar-Switch-NPTH.drl  Sixtar-Switch-PTH-drl_map.dxf  Sixtar-Switch-PTH-drl_map.gbr  Sixtar-Switch-PTH-drl_map.ps  Sixtar-Switch-PTH.drl  (+5 more)
Sixtar-Switch_RP2040/: .gitignore
Sixtar-Switch_RP2040/source/: CMakeLists.txt  main.c
Sixtar-Switch_RP2040/src/: CMakeLists.txt  main.c  main.cpp  usb_descriptors.c  usb_descriptors.h
Sixtar-Switch_RP2040/src/backup/: SwitchControlLibrary.cpp  SwitchControlLibrary.h
Sixtar-Switch_RP2040/src/include/: main.h  switch_tinyusb.h  usb_descriptors.c  usb_descriptors.h
(+1 files in other folders)
